--- a/style2.css
+++ b/style2.css
@@ -14,3 +14,9 @@ h1 {
     margin: 3rem;
     text-align: center;
 }
+h2 {
+    color: white;
+    font-size: 1rem;
+    margin:3rem;
+    text-align: center;
+}
