--- a/style2.css
+++ b/style2.css
@@ -4,7 +4,7 @@ header {
 }
 
 body {
-    background-color: rgb(220, 227, 220);
+    background-color: white;
     font-family: Arial, sans-serif;
     text-align: left;
 
