--- a/style2.css
+++ b/style2.css
@@ -9,6 +9,9 @@ body {
     text-align: left;
 
 }
+main {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 h1 {
     color: white;
     font-size: 3rem;
