--- a/style2.css
+++ b/style2.css
@@ -11,6 +11,8 @@ body {
 }
 main {
     max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 h1 {
