--- a/style2.css
+++ b/style2.css
@@ -10,8 +10,10 @@ body {
 
 }
 main {
+    
     padding: 1rem;
     max-width: 800px;
+    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
