--- a/style3.css
+++ b/style3.css
@@ -1,6 +1,7 @@
 header {
-  color: green;
+  background-color: yellow;
 }
 h1 {
  font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+ font-color: green;
 }
