--- a/style3.css
+++ b/style3.css
@@ -1,5 +1,6 @@
 header {
   background-color: yellow;
+  padding: 1rem;
 }
 h1 {
  font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
