--- a/style3.css
+++ b/style3.css
@@ -5,4 +5,6 @@ header {
 h1 {
  font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
  font-color: green;
+ text-align: center;
+ text-size: 3rem;
 }
