--- a/style3.css
+++ b/style3.css
@@ -3,7 +3,7 @@ header {
   padding: 1rem;
 }
 h1 {
- font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
+ font-family: sans-serif;
  font-color: green;
  text-align: center;
  text-size: 3rem;
