--- a/style3.css
+++ b/style3.css
@@ -20,4 +20,5 @@ main {
   margin-top: 1rem;
   padding: 1rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+  font-family: Avantgarde, TeX Gyre Adventor, URW Gothic L, sans-serif;
 }
