--- a/style3.css
+++ b/style3.css
@@ -7,7 +7,7 @@ body {
   font-family: Arial, sans-serif;
 }
 h1 {
- font-family: American Typewriter, serif;
+ font-family: fantasy;
  color: green;
  text-align: center;
  font-size: 3rem;
