--- a/style3.css
+++ b/style3.css
@@ -3,7 +3,7 @@ header {
   padding: 1rem;
 }
 body {
-  border: solid;
+  border: 2rem solid;
   background-color: #f9f9f9; /*grey*/
   font-family: Arial, sans-serif;
 }
