--- a/style3.css
+++ b/style3.css
@@ -1,7 +1,7 @@
 header {
   background-color: #8FBC8B;/*dark*/
   padding: 1rem;
-  border: 2rem solid;
+  border: 2rem solid #008000;
 }
 body {
   background-color: #f9f9f9; /*grey*/
