--- a/style3.css
+++ b/style3.css
@@ -1,7 +1,7 @@
 header {
   background-color: #8FBC8B;/*dark*/
   padding: 1rem;
-  border: 2rem solid #008000;
+  border: 1rem solid #008000;/*green*/
 }
 h1 {
  font-family: Curlz MT;
