--- a/style3.css
+++ b/style3.css
@@ -1,10 +1,14 @@
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+</style>
+
 header {
   background-color: #8FBC8B;/*dark*/
   padding: 1rem;
   border: 1rem solid #008000;/*green*/
 }
 h1 {
- font-family: Curlz MT;
+ font-family: Indie+Flower, sans serif;
  color: #A0522D;/*brown*/
  text-align: center;
  font-size: 3rem;
