--- a/style3.css
+++ b/style3.css
@@ -8,7 +8,7 @@ header {
   border: 1rem solid #008000;/*green*/
 }
 h1 {
- font-family: Indie+Flower, sans serif;
+ font-family: 'Indie Flower', sans serif;
  color: #A0522D;/*brown*/
  text-align: center;
  font-size: 3rem;
