--- a/style7gables.css
+++ b/style7gables.css
@@ -27,6 +27,6 @@ main {
   padding: 1rem;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
 }
-a {
-  color: #8A2BE2; /* A shade of purple for an eerie touch */
-}
+/*a {
+  color: #8A2BE2; A shade of purple for an eerie touch
+} */
