--- a/style7gables.css
+++ b/style7gables.css
@@ -18,7 +18,7 @@ h2 {
   text-align: center;
 }
 main {
-  background-color: #797979; /* Lighter gray */
+  background-color: #f2f2f2; /* Lighter gray */
   font-family: Arial, sans-serif;
   max-width: 1000px;
   margin-left: auto;
