--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@
     line-height: 1.6;
     color: #333;
     background-color: #f4f4f4;
+
+    background-image: url("DALLE-android1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
   }
   
   header {
