--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
    /* color: #333;
     background-color: #f4f4f4;*/
 
-    background-image: url("DALLE-android1.jpg");
+    background-image: url("Proto-Realist/protoblog/DALLE-android1.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
