--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@
     line-height: 1.6;
    /* color: #333;
     background-color: #f4f4f4;*/
-
-    background-image: url("Proto-Realist/protoblog/DALLE-android1.png");
+    
+    background-image: url("DALLE-android1.png");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
