--- a/style.css
+++ b/style.css
@@ -8,14 +8,11 @@
   body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-   /* color: #333;
-    background-color: #f4f4f4;*/
-    
-    background-image: url("DALLE-android1.png");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    color: #333;
+    background-color: #f4f4f4;
   }
+   
+
   
   header {
     background: #333;
