--- a/style.css
+++ b/style.css
@@ -8,8 +8,9 @@
   body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    color: #333;
-    background-color: #f4f4f4;
+    /*color: #333;
+    background-color: #f4f4f4;*/
+    background-image: url(DALLE-android1.png)
   }
    
 
