--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
     line-height: 1.6;
     /*color: #333;
     background-color: #f4f4f4;*/
-    background-image: url(DALLE-android1.png)
+    background-image: url("DALLE-android1.png")
   }
    
 
