--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
+    background-size: cover;
   }
    
 
