--- a/style-home.css
+++ b/style-home.css
@@ -35,18 +35,18 @@
     font-style: italic;
   }
   
-  nav ul {
+  /*nav ul {
     list-style: none;
     background-color: #444;
     text-align: center;
     padding: 0.5rem 0;
-  }
+  }*/
   
   nav ul li {
     display: inline;
   }
   
-  nav ul li a {
+ /* nav ul li a {
     color: white;
     padding: 0.5rem 1rem;
     text-decoration: none;
@@ -54,7 +54,7 @@
   
   nav ul li a:hover {
     background-color: #555;
-  }
+  }*/
   
   main {
     padding: 1rem;
