--- a/style-home.css
+++ b/style-home.css
@@ -17,12 +17,12 @@
    
 
   
-  /*header {
-    background: #333;
+  header {
+    background: #477da8;
     color: #fff;
     padding: 1rem 0;
     text-align: center;
-  }*/
+  }
   
   header h1 {
     margin: 0;
