--- a/style-home.css
+++ b/style-home.css
@@ -38,6 +38,7 @@
   }
   
   nav ul li a {
+    font-weight: bold; /* Makes the text bold */
     text-shadow: 2px 2px 3px black;
     font-size: 30px;
     color: orange;
