--- a/style-home.css
+++ b/style-home.css
@@ -39,7 +39,6 @@
   
   nav ul li a {
     font-weight: bold; /* Makes the text bold */
-    text-shadow: 2px 2px 3px black;
     font-size: 30px;
     color: orange;
     padding: 0.5rem 1rem;
@@ -51,6 +50,8 @@
   }
    
   footer {
+    color: orange;
+    text-shadow: 2px 2px 3px black;
     text-align: center;
     padding: 1rem 0;
  
