--- a/style-home.css
+++ b/style-home.css
@@ -27,36 +27,25 @@
     font-style: italic;
   }
   
-  nav ul {
-    list-style: none;
-    text-align: center;
-    padding: 0.5rem 0;
-  }
-  
   nav ul li {
-    text-align: center;
     display: inline;
   }
   
   nav ul li a {
-    text-align: center;
     font-weight: bold; /* Makes the text bold */
     font-size: 30px;
     color: orange;
-    padding: 0.5rem 1rem;
+    padding: 1rem;
     text-decoration: none;
   }
   
   nav ul li a:hover {
-    text-align: center;
     background-color: #b75221;
   }
    
   footer {
+    text-align: center;
     color: orange;
     text-shadow: 2px 2px 3px black;
-    text-align: center;
-    padding: 1rem 0;
- 
   }
   
