--- a/style-home.css
+++ b/style-home.css
@@ -7,7 +7,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    background-size: cover;
+    background-size: contain;
   }
    
   
