--- a/style-home.css
+++ b/style-home.css
@@ -3,11 +3,11 @@
   body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    background-image: url("DALLE-android1.png");
+    /*background-image: url("DALLE-android1.png");
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    background-size: contain;
+    background-size: contain;*/
   }
    
   
