--- a/style-home.css
+++ b/style-home.css
@@ -3,18 +3,20 @@
   body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    /*background-image: url("DALLE-android1.png");
+    background-color: #9b9081;
+    background-image: url("DALLE-android1.png");
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    background-size: contain;*/
+    background-size: contain;
   }
    
   
   header {
     background: #417eaa;
     text-align: center;
-    text-shadow: 2px 2px 3px #1be9f7;
+        text-shadow: 2px 2px 3px #1be9f7;
+
   }
   
   header h1 {
@@ -28,7 +30,7 @@
     font-style: italic;
   }
   
-  .background-image {
+  /*.background-image {
     background-image: url('DALLE-mist.png');
     background-repeat: no-repeat;
     background-size: cover; /* The background image will cover the entire element */
@@ -36,9 +38,9 @@
     position: relative; /* This allows the child element to be positioned absolutely within */
     height: 100vh; /* Example height, can be set to the height of your choice */
     width: 100%; /* This will make the div take the full width of the viewport */
-  }
+  }*/
   
-  .foreground-image {
+  /*.foreground-image {
     background-image: url('DALLE-android1.png');
     background-repeat: no-repeat;
     background-size: contain; /* The foreground image will be contained within the element */
@@ -48,7 +50,7 @@
     left: 0;
     height: 100%; /* Match the parent size */
     width: 100%; /* Match the parent size */
-  }
+  }*/
   
 
   nav ul li {
