--- a/style-literature.css
+++ b/style-literature.css
@@ -7,5 +7,5 @@ body {
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
-    background-attactchment: fixed;
+    background-attachment: fixed;
 }
