--- a/style-literature.css
+++ b/style-literature.css
@@ -3,7 +3,7 @@ header {
 }
 
 body {
-    font-family: 'EB Garamond', serif;
+    font-family: 'Arial', 'sans-serif';
     background-color: skyblue;
   }
   
