--- a/style-home.css
+++ b/style-home.css
@@ -1,7 +1,7 @@
 
   
   body {
-    font-family: Garamond, Arial, sans-serif;
+    font-family: Arial, sans-serif;
     line-height: 1.6;
     background-color: #9b9081;
     background-image: url("DALLE-android1.png");
