--- a/style-literature.css
+++ b/style-literature.css
@@ -14,3 +14,10 @@ body {
 li:hover {
     background-color: aquamarine;
 }
+
+.left-link {
+    text-align: left;
+}
+.right-link {
+    text-align: right;
+}
