--- a/style-literature.css
+++ b/style-literature.css
@@ -14,6 +14,9 @@ body {
 li:hover {
     background-color: aquamarine;
 }
+nav ul li {
+    text-decoration: none;
+}
 nav ul {
     display: flex;
     justify-content: space-between;
