--- a/style-literature.css
+++ b/style-literature.css
@@ -9,6 +9,6 @@
 }
 
 .header-image {
-    width: 150px; /* Adjust as needed */
-    height: auto;
+    width: 300px; /* Adjust as needed */
+    height: 300px;
 }
