--- a/style-literature.css
+++ b/style-literature.css
@@ -19,6 +19,14 @@ body {
 
 h1 {
     font-size: 3rem;
-    margin-left: 10%;
-    margin-bottom: 20%;
+    margin-left: 15%;
+    margin-bottom: 15%;
+}
+
+p {
+    margin: 20px;
+    padding: 20px;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+
 }
