--- a/style-literature.css
+++ b/style-literature.css
@@ -28,5 +28,12 @@ p {
     padding: 20px;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
+}
 
+ul li {
+    text-decoration: none;
+}
+
+.link-right {
+    content: right;
 }
