--- a/style-literature.css
+++ b/style-literature.css
@@ -1,6 +1,6 @@
 body {
     background-color: antiquewhite;
-    font-family: 'Arial', 'sans-serif';
+    font-family: 'sans-serif';
 }
 
 .top-content {
