--- a/style-literature.css
+++ b/style-literature.css
@@ -37,7 +37,12 @@ ul li {
     list-style: none;
 }
 
-.link-right {
-    display: flex;
-    justify-content: flex-end;
+
+ul li:hover {
+    background-color: gray;
+}
+
+.supplemental {
+    width: 33vw;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
 }
